Fixing some dropdown issues with positioning on small screens

--- a/content/css/themes/crm/modal.less
+++ b/content/css/themes/crm/modal.less
@@ -1,6 +1,6 @@
 .modal {
   position: relative;
-  max-width: 75%;
+  max-width: 95%;
   max-height: 95%;
   margin: auto;
   background-color: #fff;
